# n-body-rs

./: .gitignore  Cargo.toml  bacon.toml  devenv.nix  devenv.yaml
.cargo/: config.toml
src/: camera.rs  cursor.rs  main.rs  trail.rs  window.rs
